--- a/instruktioner.html
+++ b/instruktioner.html
@@ -8,7 +8,5 @@
 </head>
 
 <body>
-   <p>Dette er en paragraf</p>
-   fgxdfxd
-  <img src="aamosen.jpg" alt="Åmosen">
+   <p>Jeg er Holger: Når du kommer ind på denne fane bedes du vælge et kodeord, som dine medspillere skal kende, for at joine dit spil. Nederst på fanen kan du se den resterende tid </p>
 </body>
