--- a/instruktioner.html
+++ b/instruktioner.html
@@ -8,5 +8,8 @@
 </head>
 
 <body>
-   <p>Jeg er Holger: Når du kommer ind på denne fane bedes du vælge et kodeord, som dine medspillere skal kende, for at joine dit spil. Nederst på fanen kan du se den resterende tid </p>
+   <p> <ul>
+<li><strong>Jeg er Holger:&nbsp;</strong>N&aring;r du kommer ind p&aring; denne fane bedes du v&aelig;lge et kodeord, som dine medspillere skal kende, for at joine dit spil. Nederst p&aring; fanen kan du se den resterende tid. Yderligere finder du en knap hvor du kan slukke og t&aelig;nde for dit GPS signal</li>
+<li><strong>Find Holger:&nbsp;</strong>Du bedes skrive kodeordet som Holger har lavet, for at joine dette spil. Du har et kort til r&aring;dighed, som opdatere hvert 10 sekund. Udover dette har du ogs&aring; en timer som viser den resterende tid.&nbsp;</li>
+</ul></p>
 </body>
