--- a/instruktioner.html
+++ b/instruktioner.html
@@ -9,7 +9,11 @@
 
 <body>
    <p>
-<li><strong>Jeg er Holger:&nbsp;</strong>N&aring;r du kommer ind p&aring; denne fane bedes du v&aelig;lge et kodeord, som dine medspillere skal kende, for at joine dit spil. Nederst p&aring; fanen kan du se den resterende tid. Yderligere finder du en knap hvor du kan slukke og t&aelig;nde for dit GPS signal</li>
-<li><strong>Find Holger:&nbsp;</strong>Du bedes skrive kodeordet som Holger har lavet, for at joine dette spil. Du har et kort til r&aring;dighed, som opdatere hvert 10 sekund. Udover dette har du ogs&aring; en timer som viser den resterende tid.&nbsp;</li>
+<li>
+<h1><strong>Jeg er Holger:&nbsp;</strong>N&aring;r du kommer ind p&aring; denne fane bedes du v&aelig;lge et kodeord, som dine medspillere skal kende, for at joine dit spil. Nederst p&aring; fanen kan du se den resterende tid. Yderligere finder du en knap hvor du kan slukke og t&aelig;nde for dit GPS signal</h1>
+</li>
+<li>
+<h1><strong>Find Holger:&nbsp;</strong>Du bedes skrive kodeordet som Holger har lavet, for at joine dette spil. Du har et kort til r&aring;dighed, som opdatere hvert 10 sekund. Udover dette har du ogs&aring; en timer som viser den resterende tid.&nbsp;</h1>
+</li>
 </p>
 </body>
